package csd230.lab1.JuanRoy.pojos;

public interface SaleableItem {
    void sellItem();
    double getPrice();
}
